--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,13 @@
       }
     ],
     "no-console": 1,
-    "quotes": ["error", "single", { "allowTemplateLiterals": true }],
+    "quotes": [
+      "error",
+      "double",
+      {
+        "allowTemplateLiterals": true
+      }
+    ],
     "func-names": 0,
     "space-unary-ops": 2,
     "space-in-parens": "error",
@@ -33,6 +39,7 @@
     "comma-dangle": 0,
     "max-len": 0,
     "import/extensions": 0,
+    "import/namespace": "off",
     "no-underscore-dangle": 0,
     "consistent-return": 0,
     "radix": 0,
