--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "Boilerplate for WDD 330 SleepOutside project",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "start": "vite",
     "build": "vite build --emptyOutDir",
@@ -14,7 +15,7 @@
   "author": "Shane Thompson",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
